Started Individual contributions section

--- a/scripts/Assignment_3-EDA_Report.html
+++ b/scripts/Assignment_3-EDA_Report.html
@@ -448,6 +448,14 @@ pre code {
 <div id="individual-contributions" class="section level1">
 <h1>Individual contributions</h1>
 <p><em>1 page, 2 marks</em></p>
+<p><em>Quick bullet points before writing up</em></p>
+<p>Daniel P:</p>
+<p>Rob:</p>
+<p>Daniel W:</p>
+<ul>
+<li>Investigated and wrote about outliers and effect of linear interpolation</li>
+<li>Investigated and wrote about correlations, long-term trends and seasonality</li>
+</ul>
 </div>
 <div id="conclusion" class="section level1">
 <h1>Conclusion</h1>
